@@ -20,13 +20,17 @@ from unittest import TestCase, TestSuite, main, makeSuite
 
 from zope.testing.cleanup import CleanUp
 from zope.interface.verify import verifyObject
-from zope.exceptions import DuplicationError, NotFoundError
+from zope.exceptions import DuplicationError
 
 from zope.app.fssync.interfaces import IGlobalFSSyncUtility
+
+from zope.app.fssync.fsregistry import getSynchronizer
+from zope.app.fssync.fsregistry import provideSynchronizer
+from zope.app.fssync.fsregistry import fsRegistry
+from zope.app.fssync.fsregistry import FactoryNotFoundError
+
 from zope.app.fssync.tests.sampleclass \
      import C1, C2, CDirAdapter, CFileAdapter, CDefaultAdapter
-from zope.app.fssync.fsregistry \
-     import getSynchronizer, provideSynchronizer, fsRegistry
 
 class Test(CleanUp, TestCase):
     """Test Interface for FSRegistry Instance.
@@ -39,7 +43,7 @@ class Test(CleanUp, TestCase):
         """ Test Class and Factory registration and getSynchronizer to get
            appropriate factory for that class.
         """
-        self.assertRaises(NotFoundError, getSynchronizer, C1())
+        self.assertRaises(FactoryNotFoundError, getSynchronizer, C1())
 
         provideSynchronizer(C1, CFileAdapter)
         cl = C1()
