@@ -15,6 +15,21 @@
     />
 
 <view
+    for="zope.publisher.interfaces.ITraversalException"
+    type="zope.publisher.interfaces.http.IHTTPRequest"
+    name="index.html"
+    permission="zope.Public"
+    factory=".notfound.NotFound"
+    />
+
+<defaultView
+    for="zope.publisher.interfaces.ITraversalException"
+    type="zope.publisher.interfaces.http.IHTTPRequest"
+    name="index.html"
+    />
+
+<!-- BBB : can be removed in 3.3 -->
+<view
     for="zope.exceptions.INotFoundError"
     type="zope.publisher.interfaces.http.IHTTPRequest"
     name="index.html"
@@ -27,6 +42,7 @@
     type="zope.publisher.interfaces.http.IHTTPRequest"
     name="index.html"
     />
+<!-- END BBB : can be removed in 3.3 -->
 
 <view
     for="zope.app.publication.http.IMethodNotAllowed"
