@@ -655,6 +655,8 @@ Zope Changes
 
     Bug Fixes
 
+      - Fix #284: Bogus 404 errors with TALES traversal fails
+
       - Fix #298: Role/permission title and description should be messageids
 
       - Fix #332 : Death to IContentContainer
@@ -850,7 +852,8 @@ Zope Changes
       Jim Fulton, Fred Drake, Philipp von Weitershausen, Stephan Richter,
       Gustavo Niemeyer, Daniel Nouri, Volker Bachschneider, Roger Ineichen,
       Shane Hathaway, Bjorn Tillenius, Garrett Smith, Marius Gedminas, Stuart
-      Bishop, Dominik Huber, Dmitry Vasiliev, Gary Poster, Brian Lloyd
+      Bishop, Dominik Huber, Dmitry Vasiliev, Gary Poster, Brian Lloyd,
+      Julien Anguenot
 
 
   ------------------------------------------------------------------
